# nexusx

./: CMakeLists.txt  README.md
cfg/: vis.mac
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  nexus.cpp
src/base/: CMakeLists.txt  DetectorConstruction.cpp  DetectorConstruction.h  FactoryBase.h  PrimaryGeneration.cpp  PrimaryGeneration.h  RunManager.h
src/generators/: CMakeLists.txt  ParticleGun.cpp  ParticleGun.h
src/geometries/: CMakeLists.txt  GeometryBase.h  XenonSphere.cpp  XenonSphere.h
src/materials/: CMakeLists.txt  MaterialDatabase.cpp  MaterialDatabase.h
src/utils/: CMakeLists.txt  LambertianRandomGenerator.cpp  LambertianRandomGenerator.h  SpherePointSampler.cpp  SpherePointSampler.h
